--- a/task___1.ipynb
+++ b/task___1.ipynb
@@ -28,6 +28,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 1"
+      ],
+      "metadata": {
+        "id": "fDDTXNx4nmC0"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -136,7 +145,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "# Define symbol\n",
+        "# Defining symbol\n",
         "x = sp.symbols('x')\n",
         "\n",
         "def generate_random_function(depth=0):\n",
@@ -240,7 +249,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Generate dataset\n",
+        "# Generating dataset\n",
         "dataset = []\n",
         "categories = []\n",
         "print(\"Generating functions and computing Taylor expansions...\")\n",
@@ -249,7 +258,7 @@
         "for _ in tqdm(range(NUM_SAMPLES), desc=\"Generating SymPy Functions\"):\n",
         "    try:\n",
         "        func, category = generate_random_function()\n",
-        "        # Check if function is well-defined at x=0\n",
+        "        # Checking if function is well-defined at x=0\n",
         "        if not func.subs(x, 0).has(sp.nan, sp.oo, sp.zoo, sp.I):\n",
         "            expansion = sp.series(func, x, 0, TAYLOR_ORDER+1).removeO()\n",
         "\n",
@@ -344,7 +353,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Convert to DataFrame for easier analysis\n",
+        "# Converting to DataFrame for easier analysis\n",
         "df = pd.DataFrame(dataset)\n"
       ],
       "metadata": {
@@ -452,7 +461,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 3. Visualize Taylor expansions with improved readability\n",
+        "# 3. Visualizing Taylor expansions with improved readability\n",
         "plt.figure(figsize=(20, 15))\n",
         "\n",
         "for i in range(min(6, len(df))):\n",
@@ -472,11 +481,11 @@
         "        plt.grid(True, alpha=0.3)\n",
         "        plt.legend(fontsize=12)\n",
         "\n",
-        "        # Add text boxes with clear function and expansion\n",
+        "        # Adds text boxes with clear function and expansion\n",
         "        func_text = example['function']\n",
         "        exp_text = example['expansion']\n",
         "\n",
-        "        # Create separate text box for function and expansion\n",
+        "        # Creates separate text box for function and expansion\n",
         "        plt.figtext(0.15 + (i%2)*0.5, 0.93 - (i//2)*0.31,\n",
         "                   f\"Function: {func_text}\",\n",
         "                   ha=\"left\", fontsize=12,\n",
@@ -520,7 +529,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 4. Print examples of functions and their Taylor expansions\n",
+        "# 4. Printing examples of functions and their Taylor expansions\n",
         "print(\"\\nExamples of Functions and Their Taylor Expansions:\")\n",
         "for i in range(min(5, len(df))):\n",
         "    example = df.iloc[i]\n",
@@ -570,18 +579,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create vocabulary and tokenize dataset\n",
+        "# Creates vocabulary and tokenize dataset\n",
         "all_tokens = []\n",
         "for entry in dataset:\n",
         "    all_tokens.extend(entry['tokens'])\n",
         "    all_tokens.extend(entry['expansion_tokens'])\n",
         "\n",
-        "# Build vocabulary with special tokens\n",
+        "# Buildes vocabulary with special tokens\n",
         "vocab = ['<pad>', '<sos>', '<eos>', '<unk>'] + sorted(list(set(all_tokens)))\n",
         "token_to_id = {token: idx for idx, token in enumerate(vocab)}\n",
         "id_to_token = {idx: token for token, idx in token_to_id.items()}\n",
         "\n",
-        "# Save processed dataset and vocabulary\n",
+        "# Saving processed dataset and vocabulary\n",
         "with open('symbolic_dataset.pkl', 'wb') as f:\n",
         "    pickle.dump({\n",
         "        'dataset': dataset,\n",
